# mahaam

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
mahaam-api-cs/: .editorconfig  .gitignore  README.md  appsettings.example.json  config.example.json  mahaam.csproj  mahaam.sln
mahaam-api-cs/Src/: Program.cs
mahaam-api-go/: .gitignore  README.md  go.mod  go.sum  main.go
mahaam-api-go-way/: README.md  config.example.json  go.mod  go.sum  main.go
mahaam-api-go-way/handler/: audit.go  health.go  plan.go  (+3 more)
mahaam-api-java/: .env.example  .gitignore  README.md  build.gradle  settings.gradle
mahaam-api-py/: .gitignore  README.md  config.example.json  main.py  pyproject.toml
mahaam-api-py/feat/plan/: plan_members_repo.py  plan_model.py  plan_repo.py  plan_router.py  plan_service.py
mahaam-api-py/feat/task/: task_model.py  task_repo.py  task_router.py  task_service.py
mahaam-api-py/feat/user/: device_repo.py  suggested_emails_repo.py  user_model.py  user_repo.py  user_router.py  user_service.py
mahaam-api-py/infra/: cache.py  configs.py  db.py  email.py  exceptions.py  factory.py  http.py  log.py  middlewares.py  req.py  security.py  starter.py  validation.py
mahaam-api-py/infra/monitor/: audit_router.py  health_repo.py  health_router.py  health_service.py  log_repo.py  monitor_models.py  traffic_repo.py
mahaam-api-test/: mahaam.postman_collection.json  mahaam_local.postman_environment.json  test_local
mahaam-api-ts/: .env.example  README.md  package.json  pnpm-lock.yaml
mahaam-data/: mahaam_ddl.sql
mahaam-docs/: package-lock.json  package.json
(+264 files in other folders)
