[project]
name = "mahaam-api-py"
version = "0.1.0"
description = "Mahaam App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-utils>=0.8.0",
    "fastapi[standard]>=0.116.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "twilio>=9.6.4",
    "typing-inspect>=0.9.0",
    "uvicorn>=0.35.0",
]
